sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: illegal start of simple pattern
  for (var i : int <- 1 to getNombreValeurs()){
       ^AlgBubbleSort1:9: error: '<-' expected but '}' found.
} 
^